# Ekd

./: Makefile.in  README_LISEZMOI.txt  configure.in  ekd.py  ekd_gui.py  gestion_des_langues_en_local.py  gettext0.py  gpl_v3.0.fr.html  gpl_v3.0.html  install_ekd_linux_admin.py  mise_a_jour_gettext.py  mo_compile.py  msgfmt.py
debian/: control  copyright  postinst  prerm
gui_modules_animation/: __init__.py  animation_base_encodageFiltre.py  animation_conv_anim_en_img.py  animation_conv_img_en_anim.py  animation_conv_vid_16_9_ou_4_3.py  animation_encodage.py  animation_encodage_avchd.py  animation_encodage_general.py  animation_encodage_hd.py  animation_encodage_web.py  animation_filtres_video.py  animation_montage_video.py  animation_montage_video_decoup_une_vid.py  animation_montage_video_vid_plus_audio.py  animation_montage_video_vid_seul.py  animation_reglag_divers.py  animation_separer_video_et_audio.py  animation_tags_video.py  infoVideo.py
gui_modules_common/: EkdTamponIn.py  EkdWidgets.py  __init__.py  ffmpeg2theora_gui.py  ffmpeg_avchd_gui.py  ffmpeg_concat_gui.py  ffmpeg_gui.py  gui_base.py  mencoder_concat_gui.py  mencoder_gui.py
gui_modules_image/: __init__.py  image_base.py  selectWidget.py
gui_modules_lecture/: __init__.py  lecture_image.py  lecture_video.py
gui_modules_music_son/: __init__.py  multiplesound.py  music_son_base_sox.py  music_son_decoupe.py  music_son_encodage.py  music_son_join_multiplefile.py  music_son_normalize.py
gui_modules_sequentiel/: __init__.py  sequentiel.py  sequentiel_copie.py
langues_inst_deb/: gestion_des_langues_usr_share_ekd.py
locale/: ekd.po  ekdDoc.po  outils_traductions_ekd_comment_faire.html  outils_traductions_ekd_comment_faire.txt
menu_et_toolbar/: copyright_ekd_gplv3_mise_en_forme.txt  gplv3_mise_en_forme.txt
moteur_modules_animation/: ffmpeg.py  (+8 more)
(+48 files in other folders)
